--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,6 @@ description: Materials for Snow College Classes
 
 sidebar:
   - Home
-  - MATH 1040 Stats
-  children:
-    - Chapter 18: Confidence Intervals for 1 Sample Means
+  - label: MATH 1040 Stats
     children:
-      - Chapter 18 Overview
-      - 18.1: Critical Values
-      - 18.2: Margin of Error
-      - 18.3: Constructing Confidence Intervals
+      - 18.0
