--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,5 @@
-lsi: false
-safe: true
-source: [your repo's top level directory]
-incremental: false
-highlighter: rouge
-gist:
-  noscript: false
+theme: jekyll-theme-minimal
+url: https://drolsonmi.github.io
 kramdown:
   input: GFM
   math_engine: mathjax
