--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ url: https://drolsonmi.github.io
 markdown: kramdown
 kramdown:
   #input: GFM
-  #math_engine: mathjax
-  math_engine: katex
+  math_engine: mathjax
+  # math_engine: katex
   syntax_highlighter: rouge
+usemathjax: true
