--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
 url: https://drolsonmi.github.io
 markdown: kramdown
 kramdown:
@@ -6,5 +6,5 @@ kramdown:
   syntax_highlighter: rouge
 usemathjax: true
 
-sidebar:
-  - 18-3
+# sidebar:
+#   - 18-3
